# ItemDataAgent

./: .env.example  .gitignore  MIGRATION.md  QUICKSTART.md  README.md  agent_data.db-shm  agent_data.db-wal  example_request.json  install.ps1  pyproject.toml  render.yaml  run.ps1  setup.py  test_inbound.py
item_data_agent/: __init__.py  agent.py  api.py  config.py  email_client.py  email_factory.py  erp_client.py  imap_client.py  main.py  poller.py  postmark_client.py  smtp_client.py  state.py
tests/: __init__.py  test_agent.py
